<resources>
    <string name="app_name">Pocket Caddy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="applogo">App Logo</string>
    <string name="login">Login</string>
    <string name="registerHere">Register Here</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="resetPassword">Reset Password</string>
    <string name="create">Create New Account</string>
    <string name="fullName">Full Name</string>
    <string name="alreadyRegistered">Already Registered? Login Here</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="history">History</string>
    <string name="start_new_round">Start New Round</string>
    <string name="view_history">View History</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_new_round">NewRound</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="distance">Distance</string>
    <string name="quit">Quit</string>
    <string name="hole">Hole</string>
    <string name="next_shot">Next Shot</string>
    <string name="next_hole">Next Hole</string>
    <string name="yds">- yds</string>
    <string name="select_club">Select Club</string>
    <string name="select_your_course_below">Select your course below</string>
    <string name="add_course">Add course</string>
    <string name="search">Search</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="start_shot">Start Shot </string>
    <string name="home">Home</string>
    <string name="round_completed">Round Completed</string>
    <string name="you_can_few_this_round_in_the_history_section">You can few this round in the History section</string>
    <string name="green_check_mark">Green Check Mark</string>
    <string name="finish_round">Finish Round</string>
    <string name="finish_shot">"Finish Shot "</string>
    <string name="update_account_name">Update Account Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="account_name">Account Name</string>
    <string name="submit">Submit</string>
    <string name="current_account_name">Current Account Name</string>
    <string name="new_account_name">New Account Name</string>
    <string name="background_overlay">background overlay</string>
    <string name="new_email_address">New Email Address</string>
    <string name="current_email_address">Current Email Address</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="confirm_new_password">Confirm New Password</string>


</resources>