<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.golfapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_history"
            app:destination="@id/nav_history"
            app:enterAnim="@anim/fragment_close_enter" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.golfapp.ui.history.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.golfapp.ui.settings.SettingsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.golfapp.ui.settings.SettingsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_settings" />
</navigation>